# dahan-marketpilot

./: .env.example  .gitignore  AGENTS.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY_REVIEW.md  THIRD_PARTY_NOTICES.md  pyproject.toml  render.yaml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
config/: backtesting.yaml  dashboard.yaml  exits.yaml  indicators.yaml  notifications.yaml  paper_trading.yaml  regime.yaml  relative_strength.yaml  risk.yaml  scoring.yaml  strategy.yaml  trend_pullback.yaml  universe.yaml  volume_breakout.yaml
dashboard/: __init__.py  app.py  auth.py  cache.py  config.py  data.py  fx_view.py  models.py  redaction.py  safety_view.py
docs/: AI-COLLABORATION.md  Dahan-MarketPilot-Master-Spec.md  activation_gates.md  audit_journal.md  backtest_reports.md  backtesting.md  configuration.md  dashboard.md  exits.md  indicators.md  licensing.md  market_regime.md  notification_events.md  operations.md  operator_setup_phase08.md  order_lifecycle.md  paper_trading.md  quantconnect_verification.md  recovery.md  relative_strength.md  release.md  render_dashboard.md  risk_management.md  safety.md  scoring.md  setup.md  telegram.md  testing.md  trend_pullback.md  troubleshooting.md  universe.md  validation.md  volume_breakout.md
lean/: README.md  config.json  main.py
marketpilot/: __init__.py  audit_journal.py  backtest_reports.py  backtesting.py  configuration.py  constants.py  data_quality.py  exits.py  fx.py  indicators.py  models.py  notification_events.py  order_lifecycle.py  paper_modes.py  (+14 more)
(+265 files in other folders)
